--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ sass:
 # Build settings
 markdown:       kramdown
 
+disqus-shortname: ydh2500  # disqus 댓글 창 만들기 위해 추가
+
 # About
 author:
   name:         Chester How
