--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ sass:
 # Build settings
 markdown:       kramdown
 
-disqus-shortname: ydh2500  # disqus 댓글 창 만들기 위해 추가
+# disqus 댓글 창 만들기 위해 추가
+disqus-shortname: ydh2500
 
 # About
 author:
